Changes
=======

0.10 (unreleased)
-----------------

- Using a URL of `Selenium RC` in README where version 1.0.3 can be
  downloaded (instead of 1.0.1) which works fine with Firefox on Mac OS X,
  too.


0.9 (2010-12-28)
----------------

- Provide integration with the recent testlayer approach
  (zope.app.appsetup/zope.app.wsgi) used by Grok (#8260).
- Provide integration with plone.testing
- Make browser and RC server configurable (#6484).
- Show current test case in command log (#7876).
- Raise readable error when connection to RC server fails (#6489).
- Quit browser when the testrunner terminates (#6485).


0.8 (2010-10-22)
----------------

- Fixed tests for the StaticFilesLayer to pass with Python 2.4 through 2.7.
- API expandsion: ``getSelectOptions``


0.7 (2010-08-16)
----------------

- API expansion: ``getElementHeight|Width``, ``getCookie*`` and a few others.
- lots of action methods (``mouse*`` among others)


0.6 (2010-08-09)
----------------

- assertXpathCount now also takes ints (#7681).

- API expansion: add ``isChecked`` to verify checkboxes, ``runScript``,
  ``clickAt``, ``getLocation``, ``getSelectedValue``, ``getSelectedIndex``.

- The ``pause`` method uses float division now. Pauses where implicitly rounded
  to full seconds before when an int was passed.

- The name of the factored test layer contains the module of the bases now. The
  name is used by zope.testrunner distinguish layers. Before this fix selenium
  layers factored from base layers with the same names but in different modules
  would be considered equal by zope.testrunner.

- The factored ZTK layer cleanly shuts down the http server in tearDown now.
  This allows to run different selenium layers in one go.


0.5 (2010-08-03)
----------------

- Add a static files test layer for running selenium tests against a set
  of static (HTML) files.
- Patterns now also work with multiline strings,
  i. e. 'foo*' will match 'foo\nbar' (#7790).


0.4.2 (2010-05-20)
------------------
