@@ -1,10 +1,11 @@
 [buildout]
 extends = common.cfg
           common-zope210.cfg
+          scripts.cfg
 flavour = [plonetesting, test_plonetesting]
 extensions = mr.developer
 sources-dir = devel
-parts += omelette
+parts += omelette scripts
 
 [sources]
 plone.testing = svn https://svn.plone.org/svn/plone/plone.testing/branches/3.x
@@ -18,8 +19,21 @@ plone.app.testing = 3.0a1
 
 [test]
 defaults = ['-s', 'gocept.selenium.plonetesting.tests.plone3',
+            '-s', 'gocept.selenium.scripts.tests',
             '--tests-pattern', 'test_']
+eggs += gocept.selenium [test_script]
 extra-paths = ${zope2:location}/lib/python
+
+[coverage-test]
+recipe = zc.recipe.testrunner
+eggs = ${test:eggs}
+defaults = ['--coverage', '${buildout:directory}/coverage']
+extra-paths = ${zope2:location}/lib/python
+
+[coverage-report]
+recipe = zc.recipe.egg
+eggs = z3c.coverage
+arguments = ('coverage', 'coverage/report')
 
 [omelette]
 recipe = collective.recipe.omelette
