@@ -1,0 +1,3 @@
+[scripts]
+recipe = zc.recipe.egg:scripts
+eggs = gocept.selenium [script]
