@@ -1,0 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>nocommands</title>
+</head>
+<body>
+<p>No commands</p>
+</body>
+</html>
