@@ -4,10 +4,12 @@ Changes
 0.10 (unreleased)
 -----------------
 
+- Script that generates python tests from Selenium HTML tables.
+  Reused from KSS project, courtesy of Jeroen Vloothuis, original author.
+
 - Using a URL of `Selenium RC` in README where version 1.0.3 can be
   downloaded (instead of 1.0.1) which works fine with Firefox on Mac OS X,
   too.
-
 
 0.9 (2010-12-28)
 ----------------
